--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.16.0",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
-    "typescript": "^4.1.6"
+    "typescript": "^4.1.6",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/styled-components": "^5.1.14",
     "gh-pages": "^3.2.3"
   }
